--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
             <li>
               <a href="https://www.youtube.com/channel/UCcK8fgEoIsx8OGXw3cOHqQw" target="_blank">Godarth Inc.</a> 
             </li>
+            <li>
+              E mais um monte de projetos que a gente acaba esquecendo de contar hahaha.
+            </li>
           </ul>
 
         <p>Proeficiência com o instrumento</p>
